// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<If /> component Falsy condition With NODE_ENV === production GIVEN content w/o <Then /> nor <Else /> THEN renders empty block in production 1`] = `<Fragment />`;

exports[`<If /> component Falsy condition With NODE_ENV === test GIVEN <Then /> & <Else /> THEN renders children of <Else /> 1`] = `
<Fragment>
  <Else
    key=".1"
  >
    <span>
      Else
    </span>
  </Else>
</Fragment>
`;

exports[`<If /> component Falsy condition With NODE_ENV === test GIVEN <Then /> THEN renders null 1`] = `<Fragment />`;

exports[`<If /> component Falsy condition With NODE_ENV === test GIVEN multiple <Else /> THEN renders only first <Else /> block 1`] = `
<Fragment>
  <Else
    key=".0"
  >
    <span>
      Else1
    </span>
  </Else>
</Fragment>
`;

exports[`<If /> component Falsy condition With NODE_ENV === test GIVEN multiple <Else /> before <Then /> THEN renders <Else /> block 1`] = `
<Fragment>
  <Else
    key=".0"
  >
    <span>
      Else
    </span>
  </Else>
</Fragment>
`;

exports[`<If /> component Falsy condition With NODE_ENV === test GIVEN w/o children THEN renders null 1`] = `""`;

exports[`<If /> component Falsy condition With child as function GIVEN <Else /> THEN renders children returned by function 1`] = `
<span>
  Else
</span>
`;

exports[`<If /> component Falsy condition With child as function GIVEN <Else /> THEN renders children returned by function 2`] = `
<span>
  Else
</span>
`;

exports[`<If /> component Falsy condition With child as function GIVEN body that should not evaluate THEN should not render 1`] = `
<div>
  Ok
</div>
`;

exports[`<If /> component Falsy condition With child as function GIVEN body that should not evaluate THEN should not render 2`] = `
<div>
  Ok
</div>
`;

exports[`<If /> component Falsy condition With condition as a promise GIVEN rejected promise THEN renders <ELSE /> block 1`] = `
<span>
  Else
</span>
`;

exports[`<If /> component Truthy cases With NODE_ENV === production GIVEN content w/o <Then /> nor <Else /> THEN renders empty block in production 1`] = `
<Fragment>
  <span
    key=".0"
  >
    Not Then nor Else
  </span>
</Fragment>
`;

exports[`<If /> component Truthy cases With NODE_ENV === test GIVEN <Else /> before <Then /> THEN renders <Then /> block 1`] = `
<Fragment>
  <Then
    key=".1"
  >
    <span>
      Then
    </span>
  </Then>
</Fragment>
`;

exports[`<If /> component Truthy cases With NODE_ENV === test GIVEN <Then /> & <Else /> THEN renders children of <Then /> 1`] = `
<Fragment>
  <Then
    key=".0"
  >
    <span>
      Then
    </span>
  </Then>
</Fragment>
`;

exports[`<If /> component Truthy cases With NODE_ENV === test GIVEN <Then /> THEN renders children 1`] = `
<Fragment>
  <Then
    key=".0"
  >
    <span>
      Then
    </span>
  </Then>
</Fragment>
`;

exports[`<If /> component Truthy cases With NODE_ENV === test GIVEN multiple <Then /> blocks THEN renders only first <Then /> block 1`] = `
<Fragment>
  <Then
    key=".0"
  >
    <span>
      Then1
    </span>
  </Then>
</Fragment>
`;

exports[`<If /> component Truthy cases With NODE_ENV === test GIVEN w/o children THEN renders null 1`] = `""`;

exports[`<If /> component Truthy cases With condition as a function GIVEN <Else /> before <Then /> THEN renders <Then /> block 1`] = `
<Fragment>
  <Then
    key=".1"
  >
    <span>
      Then
    </span>
  </Then>
</Fragment>
`;

exports[`<If /> component Truthy cases With condition as a function GIVEN <Then /> & <Else /> THEN does not render children of <Else /> 1`] = `
<Fragment>
  <Then
    key=".0"
  >
    <span>
      Then
    </span>
  </Then>
</Fragment>
`;

exports[`<If /> component Truthy cases With condition as a function GIVEN <Then /> THEN renders children of <Then /> 1`] = `
<Fragment>
  <Then
    key=".0"
  >
    <span>
      Then
    </span>
  </Then>
</Fragment>
`;

exports[`<If /> component Truthy cases With condition as a function GIVEN multiple <Then /> blocks THEN renders only first <Then /> block 1`] = `
<Fragment>
  <Then
    key=".0"
  >
    <span>
      Then1
    </span>
  </Then>
</Fragment>
`;

exports[`<If /> component Truthy cases With condition as a promise GIVEN pending promise THEN renders <Fallback /> block 1`] = `
<span>
  Fallback
</span>
`;

exports[`<If /> component Truthy cases With condition as a promise GIVEN resolved promise THEN renders <THEN /> block 1`] = `
<span>
  Then
</span>
`;
